<resources>
    <string name="app_name">JoyStok</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="master_data">Master Data</string>
    <string name="purchasing">Pembelian</string>
    <string name="selling">Penjualan</string>
    <string name="stock">Stok</string>
    <string name="supplier">Pemasok</string>
    <string name="reports">Laporan</string>
    <string name="welcome">Welcome</string>
    <string name="menu">Menu</string>
    <string name="master_goods">Master Barang</string>
    <string name="master_category">Master Category</string>
    <string name="master_customer">Master Customer</string>
    <string name="backpress_message">Tap lagi untuk keluar</string>
    <string name="search">Pencarian</string>
    <string name="title_activity_category_detail">CategoryDetailActivity</string>
    <string name="category_name">Nama Kategori</string>
    <string name="remarks">Keterangan</string>
    <string name="delete">Hapus</string>
    <string name="add">Tambah</string>
    <string name="update">Ubah</string>
    <string name="name">Nama</string>
    <string name="phone">Telp</string>
    <string name="address">Alamat</string>
    <string name="code">Kode</string>
    <string name="sale_price">Harga Jual</string>
    <string name="base_price">Harga Modal</string>
    <string name="add_item">Tambah Barang</string>
    <string name="add_variant">Tambah Variant</string>
    <string name="update_item">Update Barang</string>
    <string name="delete_item">Delete Barang</string>
</resources>
