<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.joystok.presentation.ui.master_menu.MasterMenuActivity">

    <TextView
        android:id="@+id/welcomeNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/welcome"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="Pasar pagi, Mangga 2"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeNameTV" />

    <ImageView
        android:id="@+id/masterGoodsIV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_row_item_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/master_goods"
        app:layout_constraintLeft_toLeftOf="@id/storeNameTV"
        app:layout_constraintTop_toBottomOf="@id/storeNameTV" />

    <Button
        android:id="@+id/masterGoodsBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_row_item_height"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/master_goods"
        app:layout_constraintLeft_toRightOf="@id/masterGoodsIV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storeNameTV" />

    <ImageView
        android:id="@+id/masterCategoryIV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_row_item_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/master_category"
        app:layout_constraintLeft_toLeftOf="@id/welcomeNameTV"
        app:layout_constraintTop_toBottomOf="@id/masterGoodsIV"/>

    <Button
        android:id="@+id/masterCategoryBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_row_item_height"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/master_category"
        app:layout_constraintLeft_toRightOf="@id/masterGoodsIV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/masterGoodsBtn" />

    <ImageView
        android:id="@+id/masterCustomerIV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_row_item_height"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/master_customer"
        app:layout_constraintLeft_toLeftOf="@id/welcomeNameTV"
        app:layout_constraintTop_toBottomOf="@id/masterCategoryIV"/>

    <Button
        android:id="@+id/masterCustomerBtn"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_row_item_height"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/master_customer"
        app:layout_constraintLeft_toRightOf="@id/masterGoodsIV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/masterCategoryBtn" />

</android.support.constraint.ConstraintLayout>
